Fix bug in breathe circle that causes inhale text and countdown text to jump when they begin. Add in blank space to countdown span to fix issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,32 +143,52 @@ a:hover {
     margin-bottom: 2em;
 }
 
-.techniques-img {
-    border-radius: 50%;
-    padding-bottom: 1em;
+/*breathe circle*/
+/*Keeps circle the same size even in fullscreen */
+#breathe-timer {
+    height: 100%;
+    width: 100%;
+    overflow:hidden;
 }
 
-/* Footer */
-.footer-container {
+.breathe-timer {
+    margin: 50px auto;
     display: flex;
-    justify-content: center;
     align-items: center;
-}
-footer {
-    background-color: #202020 ;
+    justify-content: center;
+    width: 60%;
 }
 
-.list-group-item {
-    border: none;
+/*Style circle and organize circle content*/
+.breathe-circle {
+    height: 25em;
+    width: 25em;
+    background-color: #a3dcbe   ;
+    border: 4px solid #202020;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+}
+
+.inhale-exhale, .countdown-seconds {
+    margin: 0;
     font-size: 2em;
-    display: inline-block;
-    background-color: #202020 ;
+    font-weight: 600;
+    color: #202020 ;
 }
-.list-group-item a {
-    color: #DADED4 ;
+
+.settings-btn {
+    background-color: #a3dcbe ;
+    border-radius: 12px;
+    
 }
-.list-group-item a:hover {
-    color: #a3dcbe ;
+
+.circle-btn {
+    border:none;
+    background-color: #a3dcbe;
+    font-size: 1.5em;
 }
 
 /*Styling the Modal components*/
@@ -236,49 +256,25 @@ footer {
     color: #3C403D ;
 }
 
-/*breathe circle*/
-/*Keeps circle as the same size even in fullscreen */
-#breathe-timer {
-    height: 100%;
-    width: 100%;
-    overflow:hidden;
-}
-
-.breathe-timer {
-    margin: 50px auto;
+/* Footer */
+.footer-container {
     display: flex;
-    align-items: center;
     justify-content: center;
-    width: 60%;
-}
-
-/*Style circle and organize circle content*/
-.breathe-circle {
-    height: 25em;
-    width: 25em;
-    background-color: #a3dcbe   ;
-    border: 4px solid #202020;
-    border-radius: 50%;
-    display: flex;
     align-items: center;
-    justify-content: space-around;
-    flex-direction: column;
+}
+footer {
+    background-color: #202020 ;
 }
 
-.inhale-exhale, .countdown-seconds {
+.list-group-item {
+    border: none;
     font-size: 2em;
-    font-weight: 600;
-    color: #202020 ;
+    display: inline-block;
+    background-color: #202020 ;
 }
-
-.settings-btn {
-    background-color: #a3dcbe ;
-    border-radius: 12px;
-    
+.list-group-item a {
+    color: #DADED4 ;
 }
-
-.circle-btn {
-    border:none;
-    background-color: #a3dcbe;
-    font-size: 1.5em;
+.list-group-item a:hover {
+    color: #a3dcbe ;
 }
